--- a/package.json
+++ b/package.json
@@ -37,9 +37,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "prettier": "^3.1.1",
     "rimraf": "^6.0.1",
     "typescript": "^5.7.3",
