--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -56,6 +56,7 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@vitejs/plugin-react": "catalog:",
+    "firebase": "catalog:",
     "nanostores": "catalog:",
     "jsdom": "catalog:",
     "react": "catalog:",
