--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,6 +9,27 @@ on:
       - "**"
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          check-latest: true
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
+      - name: Install dependencies
+        run: pnpm install
+      - name: Run ESLint on core packages
+        run: pnpm --filter=@firebase-ui/core run lint && pnpm --filter=@firebase-ui/react run lint && pnpm --filter=@firebase-ui/translations run lint && pnpm --filter=@firebase-ui/styles run lint
+      - name: Check Prettier formatting
+        run: pnpm format:check
+
   test:
     runs-on: ubuntu-latest
     steps:
